<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">麦田地图</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>

    <!-- Start -->
    <string name="sign_in">登&#160;&#160;&#160;录</string>
    <string name="sign_up">注&#160;&#160;&#160;册</string>

    <string name="guide_enter">尽情享受吧</string>
    
    <!-- Sing Up -->
    <string name="signup_send_verifycode">发送验证码</string>
    <string name="signup_comfirm">确&#160;&#160;&#160;定</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="singup_verifycode_hint">请输入验证码</string>
    <string name="hint_password">请输入密码</string>

    <!-- Sign In-->
    <string name="signin_bar_right">忘记密码</string>
    <string name="signin_btn_process">登录中</string>
    <string name="signin_btn_complete">登录成功</string>
    <string name="delete">删除</string>
    <string name="tip_ignore_grain">确定删除此记录么?\n(删除的记录以后不会显示\n在附近的推荐中)</string>
    <string name="tip_added">已添加</string>
    <string name="grain">麦粒</string>
    <string name="tip_delete_fail">删除失败，请稍后再试</string>
</resources>
