<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur"
    android:orientation="vertical"
    android:weightSum="1">

    <include layout="@layout/bar_transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/et_signin_phone"
            style="@style/WhiteBackground"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_signin_passwd"
            style="@style/WhiteBackground"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:inputType="text" />

        <com.dd.processbutton.iml.ActionProcessButton xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/btn_process_signin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:enabled="false"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/green_main"
            custom:pb_colorPressed="@color/green_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/signin_btn_complete"
            custom:pb_textProgress="@string/signin_btn_process" />

    </LinearLayout>
</LinearLayout>